--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	<h1>Rabago Was Here</h1>
+	<h2>Walid was here</h2>
 </body>
 </html>
